[package]
name = "type_path"
version = "0.1.0"
edition = "2024"

[features]
default = ["derive", "uuid", "std", "glam"]

# Enables the `#[derive(TypePath)]` macro.
derive = ["dep:derive"]

# Enables TypeUuid, imports xxhash-rust.
uuid = ["dep:xxhash-rust"]

glam = ["dep:glam"]

# Implements TypePath for std types.
std = []

[dependencies]
derive = { path = "./derive", optional = true }
xxhash-rust = { version = "0.8.15", features = ["xxh3"], optional = true }
glam = { version = "0.31.0", optional = true }
parking_lot = "0.12.5"
ryhash.git = "https://github.com/RylanYancey/ryhash.git"
variadics_please = "1.1.0"
