[package]
name = "type_path"
version = "0.1.0"
edition = "2024"

[features]
default = ["derive", "uuid", "std", "glam", "bytes"]

# Enables the `#[derive(TypePath)]` macro.
derive = ["dep:derive"]

# Enables TypeUuid, imports xxhash-rust.
uuid = ["dep:xxhash-rust"]

# Implements TypePath for math primitives from the glam crate.
glam = ["dep:glam"]

# Implements TypePath for std types.
std = []

# Implements TypePath for Bytes and BytesMut.
bytes = ["dep:bytes"]

[dependencies]
derive = { path = "./derive", optional = true }
xxhash-rust = { version = "0.8.15", features = ["xxh3"], optional = true }
bytes = { version = "1.11.1", optional = true }
glam = { version = "0.31.0", optional = true }
parking_lot = "0.12.5"
ryhash.git = "https://github.com/RylanYancey/ryhash.git"
variadics_please = "1.1.0"
